Fix word wrapping on Firefox.
Also, move some css around.

See https://bugzilla.mozilla.org/show_bug.cgi?id=1136818 for the word
wrapping stuff.

--- a/src/App.scss
+++ b/src/App.scss
@@ -145,10 +145,6 @@ status.ng-enter.ng-enter-active {
 }
 
 
-.media-body {
-    flex: 1
-}
-
 #content {
     margin: auto;
     max-width: 920px;
@@ -163,32 +159,12 @@ status.ng-enter.ng-enter-active {
     padding-left: 0.3em;
 }
 
-.status .avatar {
-    width: 48px;
-}
-
-.status.compact .avatar {
-    width: 32px;
-}
-
-.status {
-    padding: 0.5em;
-    padding-right: 1em;
-    border-bottom: 1px solid silver;
-}
-
-.status-el:last-child .status {
-    border: none
+.container > * {
+    min-width: 0px;
 }
 
 [ng-click] {
     cursor: pointer;
-}
-
-.status-el p {
-    margin: 0;
-    margin-top: 0.2em;
-    margin-bottom: 0.5em;
 }
 
 .user-info {
